# snoop-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE  Readme.md  flake.nix  profile.json
.github/workflows/: ci.yaml  release.yaml
doc/: dev.md
examples/: bulk.rs  bulk_buf.rs  bulk_ref.rs  bunch.rs  read.rs  stream.rs  write.rs
src/: error.rs  format.rs  lib.rs  parser.rs  read.rs  reader.rs  snoop.rs  write.rs  writer.rs
tests/: parser.rs  reader.rs  writer.rs
tests/common/: mod.rs
