[package]
name = "snoop"
edition = "2021"
version = "1.0.0"
authors = ["ripx80"]
description = "snoop packet format parser reader and writer"

license = "MIT"
documentation = "https://docs.rs/pcap-file/"
repository = "https://github.com/ripx80/snoop"
readme = "README.md"
keywords = ["packet", "snoop", "parse", "read", "write"]
categories = ["encoding", "parsing"]

exclude = ["tests", "examples", "flake.nix", "flake.lock"]

[dependencies]

[features]
default = ["parser"]
full = ["reader", "writer"]
reader = []
writer = []
parser = []

[profile.release]
panic = 'abort'
strip = "debuginfo"

[profile.profiling]
inherits = "release"
debug = true

[profile.dev]
debug = 0
strip = "debuginfo"
incremental = true

[[example]]
name = "read"
required-features = ["reader"]

[[example]]
name = "write"
required-features = ["reader", "writer"]

[[example]]
name = "stream"
required-features = ["reader"]

[[example]]
name = "bulk"
required-features = ["reader"]

[[example]]
name = "bulk_ref"
required-features = ["reader"]

[[example]]
name = "bulk_buf"
required-features = ["reader"]
