[package]
name = "snoop"
edition = "2021"
version = "1.0.0"
authors = ["ripx80"]
description = "snoop packet format parser reader and writer"

license = "MIT"
documentation = "https://docs.rs/snoop"
repository = "https://github.com/ripx80/snoop-rs"
readme = "README.md"
keywords = ["packet", "snoop", "parse", "read", "write"]
categories = ["encoding", "parsing"]

exclude = ["tests", "examples", "flake.nix", "flake.lock"]

[dependencies]

[features]
default = ["parse"]
full = ["read", "write"]
read = []
write = []
parse = []

[profile.release]
panic = 'abort'
strip = "debuginfo"

[profile.profiling]
inherits = "release"
debug = true

[profile.dev]
debug = 0
strip = "debuginfo"
incremental = true

[[example]]
name = "read"
required-features = ["read"]

[[example]]
name = "write"
required-features = ["read", "write"]

[[example]]
name = "stream"
required-features = ["read"]

[[example]]
name = "bulk"
required-features = ["read"]

[[example]]
name = "bulk_ref"
required-features = ["read"]

[[example]]
name = "bulk_buf"
required-features = ["read"]
